2009-03-21  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-diag.cc: Add missing include.
	* sparse-xdiv.cc: Ditto.
	* DLD-FUNCTIONS/__glpk__.cc: Ditto.
	* DLD-FUNCTIONS/__lin_interpn__.cc: Ditto.
	* DLD-FUNCTIONS/__voronoi__.cc: Ditto.

2009-03-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-re-mat.cc (octave_matrix::load_ascii): Simplify.
	* ov-flt-re-mat.cc (octave_float_matrix::load_ascii): Simplify.
	* ov-cx-mat.cc (octave_complex_matrix::load_ascii): Simplify.
	* ov-flt-cx-mat.cc (octave_float_complex_matrix::load_ascii): Simplify.

2009-03-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-re-mat.cc (octave_matrix::isnan, octave_matrix::isinf,
	octave_matrix::finite): Simplify.
	* ov-flt-re-mat.cc (octave_float_matrix::isnan,
	octave_float_matrix::isinf, octave_float_matrix::finite): Simplify.
	* ov-cx-mat.cc (octave_complex_matrix::isnan,
	octave_complex_matrix::isinf, octave_complex_matrix::finite):
	Simplify.
	* ov-flt-cx-mat.cc (octave_float_complex_matrix::isnan,
	octave_float_complex_matrix::isinf,
	octave_float_complex_matrix::finite): Simplify.

2009-03-19  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* ls-oct-ascii.cc (extract_keyword): Replace loop with call to
	read_until_newline to avoid leaving stray '\r' in stream when
	reading files with CRLF line endings.

2009-03-18  Jaroslav Hajek <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc
	(scalar_col_helper, scalar_col_helper_def, scalar_col_helper_nda,
	scalar_query_helper): New classes.
	(make_col_helper): New function.
	(Fcellfun): Use col_helper classes for UniformOutput. Avoid copying by
	using const variables.

2009-03-17  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-b-bm.cc: Add missing INSTALL_BINOPs.
	* OPERATORS/op-bm-b.cc: Ditto.
	* OPERATORS/op-fm-fm.cc: Ditto.
	* OPERATORS/op-m-m.cc: Ditto.

2009-03-17  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::octave_value): Move to ov.h
	* ov.h (octave_value::octave_value): Implement fast inline constructor